<resources>
    <string name="app_name">SkiVent</string>
    <string name="menu_title_bottom_nav_home">Home</string>
    <string name="menu_title_bottom_nav_profile">Profile</string>
    <string name="menu_title_bottom_nav_camera">Camera</string>
    <string name="toolbar_profile">Hi, Dear</string>
    <string name="toolbar_camera">Scan your skin!</string>
    <string name="toolbar_result">Result</string>
    <string name="toolbar_setting">Setting</string>
    <string name="button_text_ok">OK</string>

    <string name="tvLogin">Login</string>
    <string name="loginIcon">Icon untuk login</string>
    <string name="login_button">Login</string>
    <string name="login_description">LOGIN</string>
    <string name="register">Doesn\'t have an account?</string>
    <string name="register_button">Doesn\'t have an account?</string>
    <string name="sc_login">Already have an account?</string>
    <string name="createAccount">Register</string>
    <string name="invalidLogin">Masukan data akun dengan benar!</string>

    <string name="tvRegister">Register</string>
    <string name="registerIcon">Icon untuk register</string>
    <string name="registerHeader">Create an account</string>
    <string name="registerCreate">Create Account</string>
    <string name="register_description">Silakan masukkan informasi akun Anda!</string>
    <string name="name">Fullname</string>
    <string name="email_register">Email Address</string>
    <string name="password_register">Password</string>
    <string name="passwordConfirm">Confirm Password</string>

    <string name="email">Email</string>
    <string name="emailFormatWrong">Format email tidak sesuai</string>
    <string name="emailTaken">Email yang anda masukan sudah terdaftar, silahkan ganti email</string>
    <string name="failedRegist">Registrasi gagal, silahkan coba lagi</string>

    <string name="password">Password</string>
    <string name="password_visible">Show Password</string>
    <string name="passwordLess">Password minimal harus 8 karakter</string>
    <string name="passwordNotMatch">Password tidak sama</string>
    <string name="passwordAccountWrong">Password yang anda masukkan salah</string>

    <string name="nameNone">Nama tidak boleh kosong</string>
    <string name="emailNone">Email tidak boleh kosong</string>
    <string name="passwordNone">Password tidak boleh kosong</string>
    <string name="passwordConfirmNone">Konfirmasi Password tidak boleh kosong</string>

    <string name="skivent_splash">Ingin mengecek kulit Anda? Anda Sudah tepat berada disini!</string>
    <string name="brand" translatable="false">SkiVent</string>
    <string name="imageSplashDesc">Ini adalah logo di splashscreen</string>

    <string name="const_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="UI_error_camera_error">Failed to launch camera</string>
    <string name="UI_info_intent_image">Choose a picture</string>
    <string name="UI_error_camera_take_photo">Failed take a picture</string>
</resources>