<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.authentication.Registration">

    <ImageView
        android:id="@+id/iconRegist"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/registerIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gambar_utama1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/registerHeader"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/iconRegist"
        app:layout_constraintStart_toStartOf="@+id/iconRegist"
        app:layout_constraintTop_toBottomOf="@+id/iconRegist" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/register_description"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.dicoding.skivent.customview.Name
        android:id="@+id/RegistName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.dicoding.skivent.customview.Email
        android:id="@+id/RegistEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email_register"
        app:layout_constraintEnd_toEndOf="@+id/RegistName"
        app:layout_constraintStart_toStartOf="@+id/RegistName"
        app:layout_constraintTop_toBottomOf="@+id/RegistName" />

    <com.dicoding.skivent.customview.Password
        android:id="@+id/RegistPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password_register"
        app:layout_constraintEnd_toEndOf="@+id/RegistEmail"
        app:layout_constraintStart_toStartOf="@+id/RegistEmail"
        app:layout_constraintTop_toBottomOf="@+id/RegistEmail" />

    <com.dicoding.skivent.customview.SamePassword
        android:id="@+id/RetypePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/passwordConfirm"
        app:layout_constraintEnd_toEndOf="@+id/RegistPassword"
        app:layout_constraintStart_toStartOf="@+id/RegistPassword"
        app:layout_constraintTop_toBottomOf="@+id/RegistPassword" />
    <CheckBox
        android:id="@+id/seeRegistPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_visible"
        app:layout_constraintStart_toStartOf="@+id/RetypePassword"
        app:layout_constraintTop_toBottomOf="@+id/RetypePassword" />

    <Button
        android:id="@+id/btnRegistAccount"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/registerCreate"
        app:layout_constraintEnd_toEndOf="@+id/RetypePassword"
        app:layout_constraintStart_toStartOf="@+id/RetypePassword"
        app:layout_constraintTop_toBottomOf="@+id/seeRegistPassword" />

    <TextView
        android:id="@+id/btnLoginAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:alpha="0"
        android:text="@string/sc_login"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnRegistAccount"
        app:layout_constraintStart_toStartOf="@+id/btnRegistAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistAccount"
        tools:alpha="1" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>