<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cardshape"
    tools:context=".ui.SplashScreen">

    <TextView
        android:id="@+id/tvSplashScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:alpha="0"
        android:text="@string/skivent_splash"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/namaBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/brand"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="58dp"
        android:layout_marginTop="93dp" />

    <ImageView
        android:id="@+id/logoGambar"
        android:layout_width="313dp"
        android:layout_height="227dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imageSplashDesc"
        app:layout_constraintEnd_toEndOf="@+id/tvSplashScreen"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/tvSplashScreen"
        app:layout_constraintTop_toBottomOf="@+id/tvSplashScreen"
        app:srcCompat="@drawable/gambar_utama1" />

</androidx.constraintlayout.widget.ConstraintLayout>